// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`banner/BannerPresenter/BannerPresenter renders with a fragment as actions 1`] = `
<div
  aria-label={undefined}
  aria-labelledby={undefined}
  aria-live="polite"
  className="hig__banner hig__banner--primary hig__banner--interactive hig--light-theme"
  role="alert"
>
  <figure
    className="hig__banner__icon-background hig--light-theme"
  >
    <svg
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        info-24
      </title>
      <path
        d="M12 2a10 10 0 1 0 10 10A10 10 0 0 0 12 2zm0 19a9 9 0 1 1 9-9 9 9 0 0 1-9 9z"
      />
      <path
        d="M11 11h2v6h-2z"
      />
      <circle
        cx="12"
        cy="8"
        r="1.25"
      />
    </svg>
  </figure>
  <div
    className="hig__banner__content"
  >
    <p
      className="hig__banner__message"
    >
      <span
        className="hig__typography hig__typography__text hig__typography--hig-cool-gray-70"
        style={Object {}}
      >
        Message
      </span>
    </p>
    <div
      className="hig__banner__interactions-wrapper"
    >
      <span>
        bar
      </span>
      <div>
        baz
      </div>
    </div>
  </div>
  <div
    className="hig__banner__dismiss-button"
  >
    <button
      className="hig__icon-button hig__icon-button--transparent"
      onBlur={undefined}
      onClick={undefined}
      onFocus={undefined}
      onMouseEnter={undefined}
      onMouseLeave={undefined}
      title="Dismiss"
    >
      <span
        className="hig__icon-button__icon"
      >
        <svg
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11.4 5.4l-.8-.8L8 7.3 5.4 4.6l-.8.8L7.3 8l-2.7 2.6.8.8L8 8.7l2.6 2.7.8-.8L8.7 8z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`banner/BannerPresenter/BannerPresenter renders with a label 1`] = `
<div
  aria-label="HELLO"
  aria-labelledby={undefined}
  aria-live="assertive"
  className="hig__banner hig__banner--urgent hig--light-theme"
  role="alert"
>
  <figure
    className="hig__banner__icon-background hig--light-theme"
  >
    <svg
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        error-24
      </title>
      <path
        d="M16.74 7.96l-.7-.7L12 11.29 7.96 7.26l-.7.7L11.29 12l-4.03 4.04.7.7L12 12.71l4.04 4.03.7-.7L12.71 12l4.03-4.04z"
      />
      <path
        d="M12 2a10 10 0 1 0 10 10A10 10 0 0 0 12 2zm0 19a9 9 0 1 1 9-9 9 9 0 0 1-9 9z"
      />
    </svg>
  </figure>
  <div
    className="hig__banner__content"
  >
    <p
      className="hig__banner__message"
    >
      <span
        className="hig__typography hig__typography__text hig__typography--hig-cool-gray-70"
        style={Object {}}
      >
        World
      </span>
    </p>
  </div>
  <div
    className="hig__banner__dismiss-button"
  >
    <button
      className="hig__icon-button hig__icon-button--transparent"
      onBlur={undefined}
      onClick={undefined}
      onFocus={undefined}
      onMouseEnter={undefined}
      onMouseLeave={undefined}
      title="Dismiss"
    >
      <span
        className="hig__icon-button__icon"
      >
        <svg
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11.4 5.4l-.8-.8L8 7.3 5.4 4.6l-.8.8L7.3 8l-2.7 2.6.8.8L8 8.7l2.6 2.7.8-.8L8.7 8z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`banner/BannerPresenter/BannerPresenter renders with a node as actions 1`] = `
<div
  aria-label={undefined}
  aria-labelledby={undefined}
  aria-live="polite"
  className="hig__banner hig__banner--primary hig__banner--interactive hig--light-theme"
  role="alert"
>
  <figure
    className="hig__banner__icon-background hig--light-theme"
  >
    <svg
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        info-24
      </title>
      <path
        d="M12 2a10 10 0 1 0 10 10A10 10 0 0 0 12 2zm0 19a9 9 0 1 1 9-9 9 9 0 0 1-9 9z"
      />
      <path
        d="M11 11h2v6h-2z"
      />
      <circle
        cx="12"
        cy="8"
        r="1.25"
      />
    </svg>
  </figure>
  <div
    className="hig__banner__content"
  >
    <p
      className="hig__banner__message"
    >
      <span
        className="hig__typography hig__typography__text hig__typography--hig-cool-gray-70"
        style={Object {}}
      >
        Message
      </span>
    </p>
    <div
      className="hig__banner__interactions-wrapper"
    >
      <span>
        foo
      </span>
    </div>
  </div>
  <div
    className="hig__banner__dismiss-button"
  >
    <button
      className="hig__icon-button hig__icon-button--transparent"
      onBlur={undefined}
      onClick={undefined}
      onFocus={undefined}
      onMouseEnter={undefined}
      onMouseLeave={undefined}
      title="boom"
    >
      <span
        className="hig__icon-button__icon"
      >
        <svg
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11.4 5.4l-.8-.8L8 7.3 5.4 4.6l-.8.8L7.3 8l-2.7 2.6.8.8L8 8.7l2.6 2.7.8-.8L8.7 8z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`banner/BannerPresenter/BannerPresenter renders with a string as actions 1`] = `
<div
  aria-label={undefined}
  aria-labelledby={undefined}
  aria-live="polite"
  className="hig__banner hig__banner--primary hig__banner--interactive hig--light-theme"
  role="alert"
>
  <figure
    className="hig__banner__icon-background hig--light-theme"
  >
    <svg
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        info-24
      </title>
      <path
        d="M12 2a10 10 0 1 0 10 10A10 10 0 0 0 12 2zm0 19a9 9 0 1 1 9-9 9 9 0 0 1-9 9z"
      />
      <path
        d="M11 11h2v6h-2z"
      />
      <circle
        cx="12"
        cy="8"
        r="1.25"
      />
    </svg>
  </figure>
  <div
    className="hig__banner__content"
  >
    <p
      className="hig__banner__message"
    >
      <span
        className="hig__typography hig__typography__text hig__typography--hig-cool-gray-70"
        style={Object {}}
      >
        Message
      </span>
    </p>
    <div
      className="hig__banner__interactions-wrapper"
    >
      foobar
    </div>
  </div>
  <div
    className="hig__banner__dismiss-button"
  >
    <button
      className="hig__icon-button hig__icon-button--transparent"
      onBlur={undefined}
      onClick={undefined}
      onFocus={undefined}
      onMouseEnter={undefined}
      onMouseLeave={undefined}
      title="Dismiss"
    >
      <span
        className="hig__icon-button__icon"
      >
        <svg
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11.4 5.4l-.8-.8L8 7.3 5.4 4.6l-.8.8L7.3 8l-2.7 2.6.8.8L8 8.7l2.6 2.7.8-.8L8.7 8z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`banner/BannerPresenter/BannerPresenter renders without props 1`] = `
<div
  aria-label={undefined}
  aria-labelledby={undefined}
  aria-live="polite"
  className="hig__banner hig__banner--primary hig--light-theme"
  role="alert"
>
  <figure
    className="hig__banner__icon-background hig--light-theme"
  >
    <svg
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        info-24
      </title>
      <path
        d="M12 2a10 10 0 1 0 10 10A10 10 0 0 0 12 2zm0 19a9 9 0 1 1 9-9 9 9 0 0 1-9 9z"
      />
      <path
        d="M11 11h2v6h-2z"
      />
      <circle
        cx="12"
        cy="8"
        r="1.25"
      />
    </svg>
  </figure>
  <div
    className="hig__banner__content"
  >
    <p
      className="hig__banner__message"
    >
      <span
        className="hig__typography hig__typography__text hig__typography--hig-cool-gray-70"
        style={Object {}}
      >
        Message
      </span>
    </p>
  </div>
  <div
    className="hig__banner__dismiss-button"
  >
    <button
      className="hig__icon-button hig__icon-button--transparent"
      onBlur={undefined}
      onClick={undefined}
      onFocus={undefined}
      onMouseEnter={undefined}
      onMouseLeave={undefined}
      title="Dismiss"
    >
      <span
        className="hig__icon-button__icon"
      >
        <svg
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11.4 5.4l-.8-.8L8 7.3 5.4 4.6l-.8.8L7.3 8l-2.7 2.6.8.8L8 8.7l2.6 2.7.8-.8L8.7 8z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;
